--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 # selenium==4.15.2
 
+# Flask==2.3.3
+# selenium==4.15.2
+# webdriver-manager==4.0.1
+# pandas==2.1.1
+# openpyxl==3.1.2
+# requests==2.31.0
+# gunicorn==21.2.0
+
+numpy==1.26.3
+pandas==2.1.4
 Flask==2.3.3
 selenium==4.15.2
 webdriver-manager==4.0.1
-pandas==2.1.1
 openpyxl==3.1.2
 requests==2.31.0
 gunicorn==21.2.0
